# skinner

./: .gitignore  Page007_HelloWorld.hs  Page011_Concatenation.hs  Page013_Functions.hs  Page016_Functions.hs  Page034_IfThenElse.hs  Page036_Fizzbuzz.hs  Page044_Factorials.hs  Page045_Fibonacci.hs  Page051_Countdown.hs  Page054_Reduce.hs  README.dev.md  README.md
008/: .gitignore  README.md
0080/: HelloWorld.hs  README.md
012/: Greeting.hs
0120/: README.md
013/: .gitignore  Greeting.hs  README.md
0130/: README.md
016/: .gitignore
0160/: Composition.hs  README.md
037/: .gitignore
0370/: Fizzbuzz.hs  README.md
044/: .gitignore  README.md
0440/: Factorials.hs  README.md
0450/: .gitignore  Fibonacci.hs  README.md
0451/: .gitignore  Currying.hs  README.md
0520/: .gitignore  Factors.hs  README.md
0540/: .gitignore  README.md  Reduce.hs
0550/: .gitignore  Folding.hs  README.md
0660/: .gitignore  PatternMatching.hs  README.md
0680/: .gitignore  Destructuring.hs  README.md
0760/: .gitignore  Cycle.hs  README.md
0770/: .gitignore  InfiniteFind.hs  README.md
0800/: Fibonacci.hs  README.md
0870/: .gitignore  FoldReverse.hs  README.md
0880/: .gitignore  README.md  Zipping.hs
0881/: .gitignore  ConcatMap.hs  README.md
1050/: .gitignore  ExploringUndefined.hs  README.md
1150/: .gitignore  FillingInTypeHoles.hs  README.md
1210/: .gitignore  README.md  RecordSyntax.hs
1280/: README.md  SumTypes.hs
1320/: .gitignore  README.md  SumTypes.hs
1340/: .gitignore  PolyMorphicSumTypes.hs  README.md
1350/: .gitignore  ExploringEither.hs  README.md
1560/: README.md  project.cabal
1670/: README.md
1670/app/: Main.hs
1760/: README.md  project.cabal
1760/app/: Main.hs
1820/: README.md  project.cabal
1820/src/HaskellBook/Examples/Introduction/: CreatingModules.hs
attic/_31/: LetIn.hs
attic/_35/: Guards.hs
template/: copier.yml
template/template/{{ directoryName }}/: .gitignore.jinja  README.md.jinja  {{ moduleName }}.hs.jinja  {{ programName }}.hs.jinja
