cabal-version:      3.0
name:               exploring-cabal
version:            0.1.0.0
synopsis:           ""
description:        The description.
homepage:           ""
license:            Apache-2.0
license-file:       LICENSE
author:             ""
maintainer:         ""
category:           ""
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable explore
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        exploring-cabal

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite learn-cabal-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.0,
        exploring-cabal
