cabal-version:      3.0
name:               module-examples
version:            0.1.0.0
synopsis:           ""
-- description:
homepage:           ""
license:            Apache-2.0
license-file:       LICENSE
author:             ""
maintainer:         ""
-- copyright:
category:           ""
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HaskellBook.Examples.Introduction.CreatingModules
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
